#47 fix buster deps

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 callblocker (0.13.3-1) buster; urgency=medium
 
-  * Initial packaging work with dpkg-buildpackage.
+  * Initial packaging work.
 
  -- Patrick Ammann <pammann@gmx.net>  Sat, 16 Nov 2019 15:47:38 +0100
+
